// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest should merge parent config if any 1`] = `
Object {
  "__backported": true,
  "globals": Object {
    "ts-jest": Object {
      "__parent": true,
    },
  },
}
`;

exports[`jest should returns correct config and go thru backports 1`] = `
Object {
  "__backported": true,
  "globals": Object {},
}
`;

exports[`tsJest babelConfig should be correct for given javascript file path 1`] = `
Object {
  "babelrc": false,
  "configFile": false,
  "cwd": "/Users/ahn/ts-jest",
  "envName": "test",
  "filename": undefined,
  "passPerPreset": false,
  "plugins": Array [],
  "presets": Array [],
  "root": "/Users/ahn/ts-jest",
}
`;

exports[`tsJest babelConfig should be correct for given non javascript file path 1`] = `
Object {
  "babelrc": false,
  "configFile": false,
  "cwd": "/Users/ahn/ts-jest",
  "envName": "test",
  "filename": undefined,
  "passPerPreset": false,
  "plugins": Array [],
  "presets": Array [],
  "root": "/Users/ahn/ts-jest",
}
`;

exports[`tsJest babelConfig should be correct for imported javascript file 1`] = `
Object {
  "babelrc": false,
  "configFile": false,
  "cwd": "/Users/ahn/ts-jest/src",
  "envName": "test",
  "filename": undefined,
  "passPerPreset": false,
  "plugins": Array [],
  "presets": Array [],
  "root": "/Users/ahn/ts-jest/src",
}
`;

exports[`tsJest should return correct defaults 1`] = `
Object {
  "babelConfig": undefined,
  "compiler": "typescript",
  "diagnostics": Object {
    "ignoreCodes": Array [
      6059,
      18002,
      18003,
    ],
    "pretty": true,
    "throws": true,
  },
  "isolatedModules": false,
  "packageJson": Object {
    "kind": "file",
    "value": undefined,
  },
  "stringifyContentPathRegex": undefined,
  "transformers": Array [],
  "tsConfig": Object {
    "kind": "file",
    "value": undefined,
  },
}
`;
